Subscription-billingService/infra/dev/02-billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing-service
  ports:
    - name: web 
      protocol: TCP
      port: 80
      targetPort: 8080
