Subscription-billingService/infra/dev/03-billing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: dev-services
    alb.ingress.kubernetes.io/group.order: '80'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:020415689197:certificate/3e1741aa-fa87-465c-b7e7-92090f911129
spec:
  ingressClassName: alb
  rules:
    - host: billing.s.creztu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 80
